--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+[30/5/17]
+Framework
+	-Added a stylesheet
+	-Added core functions for hiding/showing elements, soon to be tabs
+	-Implemented a combat toggle, pausing core ticks
+
 [17/1/17]
 Framework
 	-Added a file for random assorted functions to go into (Misc.js)
